// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassThreadControl match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "appId": "Legolas",
        "metadata": "you have my bow",
      },
      "type": [Function],
    },
    "path": "$",
    "type": "unit",
    "value": Object {
      "metadata": "you have my bow",
      "target_app_id": "Legolas",
      Symbol(machinat.messenger.segment.entry): "me/pass_thread_control",
    },
  },
]
`;

exports[`RequestThreadControl match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "metadata": "give me the ring",
      },
      "type": [Function],
    },
    "path": "$",
    "type": "unit",
    "value": Object {
      "metadata": "give me the ring",
      Symbol(machinat.messenger.segment.entry): "me/request_thread_control",
    },
  },
]
`;

exports[`TakeThreadContorl match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "metadata": "my precious",
      },
      "type": [Function],
    },
    "path": "$",
    "type": "unit",
    "value": Object {
      "metadata": "my precious",
      Symbol(machinat.messenger.segment.entry): "me/take_thread_control",
    },
  },
]
`;
